--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,10 @@ org.gradle.daemon=false
 org.gradle.logging.level=info
 
 # Minecraft related
+mod_id=advancedperipherals
 minecraft_version=1.19.2
 forge_version=43.2.8
+loader_version=43
 mod_version=0.7.29r
 release_type=release
 mappings_channel=parchment
