--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ mod_id=advancedperipherals
 minecraft_version=1.19.2
 forge_version=43.2.14
 loader_version=43
-mod_version=0.8r-DEV
+mod_version=0.8r
 release_type=release
 mappings_channel=parchment
 mappings_version=2022.11.20-1.19.2
