--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,8 @@ import java.text.SimpleDateFormat
 buildscript {
     repositories {
         maven {
-            name = "Minecraft Forge maven"
-            url = "https://maven.minecraftforge.net"
-        }
-        maven {
-            name = "Parchment maven"
-            url = "https://maven.parchmentmc.org"
+            name = "Intelligence Minecraft"
+            url = "https://mvn.intelligence-modding.de/Minecraft"
         }
         mavenCentral()
         gradlePluginPortal()
@@ -190,6 +186,14 @@ minecraft {
 repositories {
     mavenCentral()
     maven {
+        name = "Intelligence repository"
+        url = "https://mvn.intelligence-modding.de/Intelligence"
+    }
+    maven {
+        name = "Intelligence Minecraft repository"
+        url = "https://mvn.intelligence-modding.de/Minecraft"
+    }
+    maven {
         name = "Blamejared maven botania patchouli"
         url = 'https://maven.blamejared.com'
     }
@@ -197,10 +201,6 @@ repositories {
         name = "Squiddev maven cct"
         url = 'https://squiddev.cc/maven/'
     }
-    /*maven {
-        name = "Progwml6 maven jei"
-        url = "https://dvs1.progwml6.com/files/maven/"
-    }*/
     maven {
         name = "Theillusivec4 maven curios"
         url = "https://maven.theillusivec4.top/"
@@ -222,14 +222,6 @@ repositories {
         }
     }
     maven {
-        name = "Srendi Space repository"
-        url "https://packages.intelligence-modding.de/maven/p/advanced-peripherals/ap-repository"
-        credentials {
-            username = spaceUsername
-            password = spacePassword
-        }
-    }
-    maven {
         name = "SirEdvin's private repository"
         url = "https://repo.repsy.io/mvn/siredvin/default"
         content {
@@ -248,7 +240,7 @@ repositories {
         }
     }
     maven {
-        url "https://cursemaven.com"
+        url = "https://cursemaven.com"
         content {
             includeGroup "curse.maven"
         }
@@ -418,23 +410,21 @@ tasks.withType(Checkstyle) {
 }
 
 tasks.named('processResources', ProcessResources).configure {
-    var replaceProperties = [
-            minecraft_version: minecraft_version,
-            forge_version: forge_version,
-            loader_version: loader_version,
-            mod_id: mod_id, mod_version: mod_version,
-            cc_version: cc_version,
-            curios_version: curios_version,
-            minecolonies_version: minecolonies_version,
-            appliedenergistics_version: appliedenergistics_version,
-            patchouli_version: patchouli_version,
-            refinedstorage_version: refinedstorage_version,
-            botania_version: botania_version,
-            create_version: create_version,
-            mekanism_version: mekanism_version,
-            ae2things_version: ae2things_version,
-            powah_version: powah_version,
-    ]
+    var replaceProperties = [minecraft_version         : minecraft_version,
+                             forge_version             : forge_version,
+                             loader_version            : loader_version,
+                             mod_id                    : mod_id, mod_version: mod_version,
+                             cc_version                : cc_version,
+                             curios_version            : curios_version,
+                             minecolonies_version      : minecolonies_version,
+                             appliedenergistics_version: appliedenergistics_version,
+                             patchouli_version         : patchouli_version,
+                             refinedstorage_version    : refinedstorage_version,
+                             botania_version           : botania_version,
+                             create_version            : create_version,
+                             mekanism_version          : mekanism_version,
+                             ae2things_version         : ae2things_version,
+                             powah_version             : powah_version,]
 
     inputs.properties replaceProperties
 
@@ -466,13 +456,9 @@ tasks.register('publishCurseForge', TaskPublishCurseForge, { task ->
             file.changelog = ""
         }
 
-        addOptional(
-                'applied-energistics-2', 'curios', 'mekanism', 'refined-storage'
-        )
+        addOptional('applied-energistics-2', 'curios', 'mekanism', 'refined-storage')
 
-        addRequirement(
-                'cc-tweaked'
-        )
+        addRequirement('cc-tweaked')
 
         releaseType = "${release_type}"
     }
@@ -480,7 +466,8 @@ tasks.register('publishCurseForge', TaskPublishCurseForge, { task ->
 })
 
 modrinth {
-    token = modrinthKey // This is the default. Remember to have the MODRINTH_TOKEN environment variable set or else this will fail, or set it to whatever you want - just make sure it stays private!
+    token = modrinthKey
+    // This is the default. Remember to have the MODRINTH_TOKEN environment variable set or else this will fail, or set it to whatever you want - just make sure it stays private!
     projectId = 'SOw6jD6x' // This can be the project ID or the slug. Either will work!
     versionNumber = "${minecraft_version}-${project.version}"
     versionName = "Advanced Peripherals ${minecraft_version} ${version}"
@@ -499,16 +486,8 @@ modrinth {
 publishing {
     repositories {
         maven {
-            name="space"
-            url = "https://packages.intelligence-modding.de/maven/p/advanced-peripherals/ap-repository"
-            credentials {
-                username = spaceUsername
-                password = spacePassword
-            }
-        }
-        maven {
             name = "public"
-            url = "https://mvn.intelligence-modding.de/intelligence"
+            url = "https://mvn.intelligence-modding.de/Intelligence"
             credentials {
                 username = repositoryName
                 password = repositoryKey
