--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.logging.level=info
 # Minecraft related
 mod_id=advancedperipherals
 minecraft_version=1.19.2
-forge_version=43.2.8
+forge_version=43.2.21
 loader_version=43
 mod_version=0.7.29r
 release_type=release
@@ -21,15 +21,15 @@ kotlinx_coroutines_version=1.6.0-RC3
 ttoolkit_version=0.1.3
 
 # Mod dependencies
-cc_version=1.101.2
-curios_version=1.19.2-5.1.2.2
-minecolonies_version=1.19.2-1.0.1410-ALPHA
-appliedenergistics_version=12.9.2
-patchouli_version=1.19.2-76
+cc_version=1.101.3
+curios_version=1.19.2-5.1.41
+minecolonies_version=1.19.2-1.1.36-BETA
+appliedenergistics_version=12.9.5
+patchouli_version=1.19.2-77
 refinedstorage_version=1.11.6
-botania_version=1.19.2-438-FORGE-SNAPSHOT
+botania_version=1.19.2-440-FORGE
 create_version=0.5.1.b-30
-mekanism_version=1.19.2-10.3.8.477
+mekanism_version=1.19.2-10.3.9.13
 ae2things_version=4367610
 powah_version=4183078
 
@@ -38,10 +38,10 @@ powah_version=4183078
 structurize_version=1.19.2-1.0.491-ALPHA
 domumornamentum_version=1.19-1.0.83-ALPHA
 blockui_version=1.19-0.0.69-ALPHA
-multipiston_version=1.19.2-1.2.19-ALPHA
+multipiston_version=1.19.2-1.2.21-ALPHA
 
 # Mod dependencies for testing stuff(Only used in the dev environment)
-jei_version=1.19.2-forge:11.6.0.1011
+jei_version=1.19.2-forge:11.6.0.1016
 
 # Credentials for the intelligence repository
 spaceUsername = Pat
