--- a/gradle.properties
+++ b/gradle.properties
@@ -16,13 +16,13 @@ jb_annotations=21.0.1
 # Test dependencies
 junit_version=5.7.2
 hamcrest_version=2.2
-kotlin_version=1.6.10
+kotlin_version=1.8.0
 kotlinx_coroutines_version=1.6.0-RC3
 ttoolkit_version=0.1.3
 
 # Mod dependencies
 cc_version=1.101.3
-curios_version=1.19.2-5.1.41
+curios_version=1.19.2-5.1.4.1
 minecolonies_version=1.19.2-1.1.36-BETA
 appliedenergistics_version=12.9.5
 patchouli_version=1.19.2-77
@@ -32,6 +32,7 @@ create_version=0.5.1.b-30
 mekanism_version=1.19.2-10.3.9.13
 ae2things_version=4367610
 powah_version=4183078
+ae2additions_version=4646599
 
 # Mod dependencies which are needed for other mods
 # For minecolonies
