[#497] Fixed 32 signed integer overflow with RS Bridge functions when too many  external storages(Or with a huge size) or too many disks were used.

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,7 +7,7 @@ logoFile = "pack.png"
 modId = "advancedperipherals"
 version = "${file.jarVersion}"
 displayName = "Advanced Peripherals"
-displayURL = "https://docs.srendi.de/"
+displayURL = "https://docs.intelligence-modding.de/"
 authors = "Srendi"
 description = '''
 Advanced Peripherals is a mod that adds many useful extensions for CC:Tweaked(Computercraft).
