Fix version and docs url

--- a/build.gradle
+++ b/build.gradle
@@ -423,7 +423,8 @@ tasks.named('processResources', ProcessResources).configure {
     var replaceProperties = [minecraft_version         : minecraft_version,
                              forge_version             : forge_version,
                              loader_version            : loader_version,
-                             mod_id                    : mod_id, mod_version: mod_version,
+                             mod_id                    : mod_id,
+                             version                   : version,
                              cc_version                : cc_version,
                              curios_version            : curios_version,
                              minecolonies_version      : minecolonies_version,
