--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -5,9 +5,9 @@ issueTrackerURL = "https://github.com/Seniorendi/AdvancedPeripherals/issues"
 logoFile = "pack.png"
 [[mods]]
 modId = "${mod_id}"
-version = "${mod_version}"
+version = "${version}"
 displayName = "Advanced Peripherals"
-displayURL = "https://docs.srendi.de/"
+displayURL = "https://docs.intelligence-modding.de.de/"
 authors = "Srendi"
 description = '''
 Advanced Peripherals provied multiple extensions for ComputerCraft in form of Peripherals, Pocket Upgrades, Turtles or new gear.
