--- a/build.gradle
+++ b/build.gradle
@@ -293,7 +293,7 @@ dependencies {
     compileOnly fg.deobf("curse.maven:ae-additions-493962:${ae2additions_version}")
     runtimeOnly fg.deobf("curse.maven:ae-additions-493962:${ae2additions_version}")
 
-    implementation 'thedarkcolour:kotlinforforge:3.12.0'
+    implementation "thedarkcolour:kotlinforforge:${kotlinforforge_version}"
 
     // Botania
     compileOnly fg.deobf("vazkii.botania:Botania:${botania_version}")
