--- a/gradle.properties
+++ b/gradle.properties
@@ -25,7 +25,7 @@ ttoolkit_version=0.1.3
 cc_version=1.106.1
 curios_version=5.2.0-beta.3+1.20.1
 minecolonies_version=1.20.1-1.0.1525-ALPHA
-appliedenergistics_version=15.0.3-alpha
+appliedenergistics_version=15.0.5-beta
 patchouli_version=1.19.3-78
 refinedstorage_version=1.11.1
 botania_version=1.19.2-436-SNAPSHOT
@@ -34,6 +34,7 @@ mekanism_version=1.20.1-10.3.9.homebaked
 ae2things_version=4616683
 powah_version=4638301
 ae2additions_version=4646598
+kotlinforforge_version=4.4.0
 
 # Mod dependencies which are needed for other mods
 # For minecolonies
