--- a/build.gradle
+++ b/build.gradle
@@ -271,30 +271,30 @@ dependencies {
 
     // Extended requirements
     // We don't use the api since we need a specific class from mekanism
-    implementation fg.deobf("mekanism:Mekanism:${mekanism_version}")
+    compileOnly fg.deobf("mekanism:Mekanism:${mekanism_version}")
 
     // Applied Energistics 2
-    implementation fg.deobf("appeng:appliedenergistics2-forge:${appliedenergistics_version}")
+    compileOnly fg.deobf("appeng:appliedenergistics2-forge:${appliedenergistics_version}")
     // Curios
-    runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
+    compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
 
     // Refined Storage
-    implementation fg.deobf("com.refinedmods:refinedstorage:${refinedstorage_version}") {
+    compileOnly fg.deobf("com.refinedmods:refinedstorage:${refinedstorage_version}") {
         transitive false
     }
 
     // AE2 Things
     compileOnly fg.deobf("curse.maven:ae2things-609977:${ae2things_version}-sources")
-    runtimeOnly fg.deobf("curse.maven:ae2things-609977:${ae2things_version}-sources")
+    //runtimeOnly fg.deobf("curse.maven:ae2things-609977:${ae2things_version}-sources")
 
     // AE2 Additions
     compileOnly fg.deobf("curse.maven:ae-additions-493962:${ae2additions_version}")
-    runtimeOnly fg.deobf("curse.maven:ae-additions-493962:${ae2additions_version}")
+    //runtimeOnly fg.deobf("curse.maven:ae-additions-493962:${ae2additions_version}")
 
     implementation 'thedarkcolour:kotlinforforge:3.12.0'
 
     // Botania
-    implementation fg.deobf("vazkii.botania:Botania:${botania_version}")
+    compileOnly fg.deobf("vazkii.botania:Botania:${botania_version}")
 
     // Minecolonies
     // Change to compileOnly when running `runData`
@@ -305,20 +305,20 @@ dependencies {
     compileOnly fg.deobf("com.ldtteam:blockui:${blockui_version}")
 
     //Patchouli
-    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
+    compileOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
 
     // Create
-    implementation fg.deobf("com.simibubi.create:create-${minecraft_version}:${create_version}:all")
+    compileOnly fg.deobf("com.simibubi.create:create-${minecraft_version}:${create_version}:all")
 
     //Removed until fully ported
     //testImplementation fg.deobf("site.siredvin.ttoolkit:ttoolkit-${minecraft_version}:${ttoolkit_version}")
 
     //Powah
-    implementation fg.deobf("curse.maven:powah-633483:${powah_version}")
-    implementation fg.deobf("me.shedaniel.cloth:cloth-config-forge:8.2.88")
-    implementation fg.deobf("dev.architectury:architectury-forge:6.2.43")
+    compileOnly fg.deobf("curse.maven:powah-633483:${powah_version}")
+    compileOnly fg.deobf("me.shedaniel.cloth:cloth-config-forge:8.2.88")
+    compileOnly fg.deobf("dev.architectury:architectury-forge:6.2.43")
 
-    implementation fg.deobf("curse.maven:crash-utilities-371813:4406293")
+    compileOnly fg.deobf("curse.maven:crash-utilities-371813:4406293")
 
     testImplementation "org.junit.jupiter:junit-jupiter-api:${junit_version}"
     testImplementation "org.junit.jupiter:junit-jupiter-params:${junit_version}"
