--- a/gradle.properties
+++ b/gradle.properties
@@ -7,8 +7,8 @@ mod_id=advancedperipherals
 minecraft_version=1.20.1
 forge_version=47.1.0
 loader_version=47
-mod_version=0.7.31a
-release_type=alpha
+mod_version=0.7.32b
+release_type=beta
 mappings_channel=official
 #mappings_version=2022.11.27-1.19.2
 mappings_version=1.20.1
