--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -39,17 +39,17 @@ body:
       multiple: false
       options:
         - Own compiled build.
-        - 1.20.1-0.7.31a (Latest 1.20.1)
+        - 1.20.1-0.7.32b (Latest 1.20.1)
+        - 1.20.1-0.7.31a
         - 1.20.1-0.7.30a
         - 1.19.3-0.7.29r (Latest 1.19.3)
         - 1.19.3-0.7.28r
-        - 1.19.3-0.7.27r
-        - 1.19.2-0.7.29r (Latest 1.19.2)
+        - 1.19.2-0.7.30r (Latest 1.19.2)
+        - 1.19.2-0.7.29r 
         - 1.19.2-0.7.28r
-        - 1.19.2-0.7.27r
-        - 1.18.2-0.7.30r (Latest 1.18.2)
+        - 1.18.2-0.7.31r (Latest 1.18.2)
+        - 1.18.2-0.7.30r
         - 1.18.2-0.7.29r
-        - 1.18.2-0.7.28r
         - older (probably unsupported)
     validations:
       required: true
