--- a/gradle.properties
+++ b/gradle.properties
@@ -30,7 +30,7 @@ patchouli_version=1.19.3-78
 refinedstorage_version=1.11.1
 botania_version=1.19.2-436-SNAPSHOT
 create_version=0.5.1.d-9
-mekanism_version=1.20.1-10.3.9.homebaked
+mekanism_version=1.19.2-10.3.9.13
 ae2things_version=4616683
 powah_version=4638301
 ae2additions_version=4646598
