--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,12 @@ import java.text.SimpleDateFormat
 buildscript {
     repositories {
         maven {
-            name = "Intelligence Minecraft"
-            url = "https://mvn.intelligence-modding.de/Minecraft"
+            name = "Minecraft Forge maven"
+            url = "https://maven.minecraftforge.net"
+        }
+        maven {
+            name = "Parchment maven"
+            url = "https://maven.parchmentmc.org"
         }
         mavenCentral()
         gradlePluginPortal()
@@ -188,11 +192,11 @@ repositories {
     /*maven {
         name = "Intelligence repository"
         url = "https://mvn.intelligence-modding.de/Intelligence"
-    }*/
+    }
     maven {
         name = "Intelligence Minecraft repository"
         url = "https://mvn.intelligence-modding.de/Minecraft"
-    }
+    }*/
     maven {
         name = "Blamejared maven botania patchouli"
         url = 'https://maven.blamejared.com'
