Update dependencies and add maven publication Make all of our dependencies optional when published to our maven repository

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -10,7 +10,7 @@ displayName = "Advanced Peripherals"
 displayURL = "https://docs.intelligence-modding.de/"
 authors = "Srendi"
 description = '''
-Advanced Peripherals provied multiple extensions for ComputerCraft in form of Peripherals, Pocket Upgrades, Turtles or new gear.
+Advanced Peripherals provides multiple extensions for ComputerCraft in form of Peripherals, Pocket Upgrades, Turtles or new gear.
 It also integrates with multiple third party mods.
 '''
 [[dependencies.${mod_id}]]
