--- a/build.gradle
+++ b/build.gradle
@@ -19,12 +19,13 @@ buildscript {
 
 plugins {
     id "maven-publish"
-    id 'net.darkhax.curseforgegradle' version '1.1.15'
+    id 'net.darkhax.curseforgegradle' version '1.1.16'
     id 'org.jetbrains.changelog' version '1.2.1'
     id "com.modrinth.minotaur" version "2.+"
     id "org.jetbrains.kotlin.jvm" version "1.6.10"
     id "org.sonarqube" version "4.3.+"
     id 'checkstyle'
+    id 'java'
 }
 
 apply plugin: 'net.minecraftforge.gradle'
@@ -185,10 +186,10 @@ minecraft {
 
 repositories {
     mavenCentral()
-    /*maven {
+    maven {
         name = "Intelligence repository"
         url = "https://mvn.intelligence-modding.de/Intelligence"
-    }*/
+    }
     maven {
         name = "Intelligence Minecraft repository"
         url = "https://mvn.intelligence-modding.de/Minecraft"
@@ -293,7 +294,7 @@ dependencies {
     compileOnly fg.deobf("curse.maven:ae-additions-493962:${ae2additions_version}")
     runtimeOnly fg.deobf("curse.maven:ae-additions-493962:${ae2additions_version}")
 
-    implementation "thedarkcolour:kotlinforforge:${kotlinforforge_version}"
+    implementation fg.deobf("thedarkcolour:kotlinforforge:${kotlinforforge_version}")
 
     // Botania
     compileOnly fg.deobf("vazkii.botania:Botania:${botania_version}")
@@ -483,7 +484,7 @@ modrinth {
     versionType = release_type
     uploadFile = jar // With Loom, this MUST be set to `remapJar` instead of `jar`!
     gameVersions = [minecraft_version] // Must be an array, even with only one version
-    loaders = ["forge"] // Must also be an array - no need to specify this if you're using Loom or ForgeGradl
+    loaders = ["forge"] // Must also be an array - no need to specify this if you're using Loom or ForgeGradle
     try {
         changelog = "${project.changelog.get("${minecraft_version}-${project.version}").withHeader(false).toText()}"
     } catch (err) {
@@ -493,6 +494,56 @@ modrinth {
 }
 
 publishing {
+    publications { PublicationContainer publicationContainer ->
+        publicationContainer.register("maven", MavenPublication) { MavenPublication publication ->
+            publication.from((SoftwareComponent) components.java)
+            publication.groupId = project.group
+            publication.version = isSnapshotVersion ? "${minecraft_version}-${version}-${project.teamcityBuild}" : "${minecraft_version}-${version}"
+            publication.artifactId =  isSnapshotVersion ? "advancedperipherals-snapshots" : "advancedperipherals"
+            publication.artifacts = [jar]
+            publication.pom {
+                name.set("AdvancedPeripherals")
+                packaging = 'jar'
+                description.set('Advanced Peripherals provides multiple extensions for ComputerCraft in form of Peripherals, Pocket Upgrades, Turtles or new gear.\n' +
+                        'It also integrates with multiple third party mods.')
+                url.set('https://docs.intelligence-modding.de/')
+                scm {
+                    url.set('https://github.com/SirEndii/AdvancedPeripherals.git')
+                }
+                issueManagement {
+                    system.set('github')
+                    url.set('https://github.com/SirEndii/AdvancedPeripherals/issues')
+                }
+                licenses {
+                    license {
+                        name.set('Apache-2.0')
+                        distribution.set('repo')
+                    }
+                }
+                withXml {
+                    NodeList dependencies = asNode().dependencies
+                    NodeList allDeps = dependencies.'*'
+
+                    // Remove forge deps
+                    allDeps.<Node> findAll() { Node el ->
+                        el.artifactId.text() == 'forge' && el.groupId.text() == 'net.minecraftforge'
+                    }.forEach() { Node el ->
+                        el.parent().remove(el)
+                    }
+                    //remove ForgeGradle's mapped suffix from versions & set as optional so anyone else doesn't inherit them
+                    allDeps.<Node> findAll() { Node el ->
+                        el.version.text().contains('_mapped_')
+                    }.each { Node el ->
+                        el.version.each { Node version ->
+                            def versionText = version.text()
+                            version.setValue(versionText.substring(0, versionText.indexOf('_mapped_')))
+                        }
+                        el.appendNode('optional', true)
+                    }
+                }
+            }
+        }
+    }
     repositories {
         maven {
             name = "public"
@@ -501,13 +552,6 @@ publishing {
                 username = repositoryName
                 password = repositoryKey
             }
-        }
-    }
-    publications {
-        gpr(MavenPublication) {
-            artifactId = isSnapshotVersion ? "advancedperipherals-snapshots" : "advancedperipherals"
-            version = isSnapshotVersion ? "${minecraft_version}-${version}-${project.teamcityBuild}" : "${minecraft_version}-${version}"
-            from(components.java)
         }
     }
 }
