Added missing gradle property for kotlin for forge

--- a/gradle.properties
+++ b/gradle.properties
@@ -33,6 +33,7 @@ mekanism_version=1.19.2-10.3.9.13
 ae2things_version=4367610
 powah_version=4183078
 ae2additions_version=4646599
+kotlinforforge_version=3.12.0
 
 # Mod dependencies which are needed for other mods
 # For minecolonies
