The pipeline has a pre-defined project JDK. Removed the JDK from the qodana configuration

--- a/qodana.yaml
+++ b/qodana.yaml
@@ -17,7 +17,7 @@ exclude:
       - src/testMod/resources/*
       - src/server-files/resources/*
 
-projectJDK: temurin-17 #(Applied in CI/CD pipeline)
+#projectJDK: temurin-17 #(Applied in CI/CD pipeline)
 
 #Execute shell command before Qodana execution (Applied in CI/CD pipeline)
 #bootstrap: sh ./prepare-qodana.sh
