[#511] Fix patchouli book for 1.20.1+
Moved the assets to the assets folder to follow the new resource pack bases books guideline. See https://vazkiimods.github.io/Patchouli/docs/upgrading/upgrade-guide-120

--- a/build.gradle
+++ b/build.gradle
@@ -296,7 +296,7 @@ dependencies {
     implementation fg.deobf("com.ldtteam:blockui:${blockui_version}")
 
     //Patchouli
-    //runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
+    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}-FORGE")
 
     // Create
     compileOnly fg.deobf("com.simibubi.create:create-1.20.1:${create_version}:all")
