--- a/qodana.yaml
+++ b/qodana.yaml
@@ -16,3 +16,7 @@ exclude:
       - src/test/resources/*
       - src/testMod/resources/*
       - src/server-files/resources/*
+include:
+  - name: CheckDependencyLicenses
+  - name: TrivialIf
+  - name: NullableProblems
