--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@ jb_annotations=21.0.1
 junit_version=5.7.2
 hamcrest_version=2.2
 kotlin_version=1.8.0
-kotlinx_coroutines_version=1.6.0-RC3
+kotlinx_coroutines_version=1.7.3
 ttoolkit_version=0.1.3
 
 # Mod dependencies
