Add CC:T to the requirements

--- a/build.gradle
+++ b/build.gradle
@@ -471,6 +471,10 @@ modrinth {
     uploadFile = jar // With Loom, this MUST be set to `remapJar` instead of `jar`!
     gameVersions = [minecraft_version] // Must be an array, even with only one version
     loaders = ["forge"] // Must also be an array - no need to specify this if you're using Loom or ForgeGradle
+    dependencies {
+        required.project "cc-tweaked"
+    }
+
     try {
         changelog = "${project.changelog.get("${minecraft_version}-${project.version}").withHeader(false).toText()}"
     } catch (err) {
