--- a/build.gradle
+++ b/build.gradle
@@ -246,28 +246,34 @@ configurations {
 }
 
 dependencies {
+    // If some of the dependencies are not needed in the dev environment, you can comment the `runtimeOnly` line so it
+    // will not be included in the client.
+
     // Minimal requirements
     compileOnly "org.jetbrains:annotations:${jb_annotations}"
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
     implementation fg.deobf("org.squiddev:cc-tweaked-${minecraft_version}:${cc_version}")
-    // Compile-time API required
-    // Ae2
-    compileOnly fg.deobf("appeng:appliedenergistics2-forge:${appliedenergistics_version}")
-    // Curios
-    compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}:api")
     // Minimal requirements end
 
     // Extended requirements
     // We don't use the api since we need a specific class from mekanism
     compileOnly fg.deobf("mekanism:Mekanism:${mekanism_version}")
+    runtimeOnly fg.deobf("mekanism:Mekanism:${mekanism_version}")
 
     // Applied Energistics 2
     compileOnly fg.deobf("appeng:appliedenergistics2-forge:${appliedenergistics_version}")
+    runtimeOnly fg.deobf("appeng:appliedenergistics2-forge:${appliedenergistics_version}")
+
     // Curios
+    compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}:api")
     compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
+    runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
 
     // Refined Storage
     compileOnly fg.deobf("com.refinedmods:refinedstorage:${refinedstorage_version}") {
+        transitive false
+    }
+    runtimeOnly fg.deobf("com.refinedmods:refinedstorage:${refinedstorage_version}") {
         transitive false
     }
 
@@ -283,6 +289,7 @@ dependencies {
 
     // Botania
     compileOnly fg.deobf("vazkii.botania:Botania:${botania_version}")
+    runtimeOnly fg.deobf("vazkii.botania:Botania:${botania_version}")
 
     // Minecolonies
     // Change to compileOnly when running `runData`
@@ -291,22 +298,32 @@ dependencies {
     compileOnly fg.deobf("com.ldtteam:multipiston:${multipiston_version}")
     compileOnly fg.deobf("com.ldtteam:domum_ornamentum:${domumornamentum_version}:universal")
     compileOnly fg.deobf("com.ldtteam:blockui:${blockui_version}")
+    // IMPORTANT. This should be removed/uncommented when running `runData`
+    runtimeOnly fg.deobf("com.ldtteam:minecolonies:${minecolonies_version}")
+    runtimeOnly fg.deobf("com.ldtteam:structurize:${structurize_version}")
+    runtimeOnly fg.deobf("com.ldtteam:multipiston:${multipiston_version}")
+    runtimeOnly fg.deobf("com.ldtteam:domum_ornamentum:${domumornamentum_version}:universal")
+    runtimeOnly fg.deobf("com.ldtteam:blockui:${blockui_version}")
 
     //Patchouli
     compileOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
+    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
 
     // Create
     compileOnly fg.deobf("com.simibubi.create:create-${minecraft_version}:${create_version}:all")
+    runtimeOnly fg.deobf("com.simibubi.create:create-${minecraft_version}:${create_version}:all")
 
     //Removed until fully ported
     //testImplementation fg.deobf("site.siredvin.ttoolkit:ttoolkit-${minecraft_version}:${ttoolkit_version}")
 
     //Powah
     compileOnly fg.deobf("curse.maven:powah-633483:${powah_version}")
-    compileOnly fg.deobf("me.shedaniel.cloth:cloth-config-forge:8.2.88")
-    compileOnly fg.deobf("dev.architectury:architectury-forge:6.2.43")
+    runtimeOnly fg.deobf("curse.maven:powah-633483:${powah_version}")
+    runtimeOnly fg.deobf("me.shedaniel.cloth:cloth-config-forge:8.2.88")
+    runtimeOnly fg.deobf("dev.architectury:architectury-forge:6.2.43")
 
-    compileOnly fg.deobf("curse.maven:crash-utilities-371813:4406293")
+    // Crash utilities. Used to debug the chunky turtle. Can be uncommented if not needed
+    runtimeOnly fg.deobf("curse.maven:crash-utilities-371813:4406293")
 
     testImplementation "org.junit.jupiter:junit-jupiter-api:${junit_version}"
     testImplementation "org.junit.jupiter:junit-jupiter-params:${junit_version}"
