--- a/gradle.properties
+++ b/gradle.properties
@@ -34,6 +34,7 @@ ae2things_version=4367610
 powah_version=4183078
 ae2additions_version=4646599
 kotlinforforge_version=3.12.0
+appliedmekanistics_version=4734608
 
 # Mod dependencies which are needed for other mods
 # For minecolonies
