--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.logging.level=info
 # Minecraft related
 mod_id=advancedperipherals
 minecraft_version=1.20.1
-forge_version=47.2.1
+neo_version=47.1.79
 loader_version=47
 mod_version=0.7.33b
 release_type=beta
