--- a/build.gradle
+++ b/build.gradle
@@ -2,33 +2,17 @@ import net.darkhax.curseforgegradle.TaskPublishCurseForge
 
 import java.text.SimpleDateFormat
 
-buildscript {
-    repositories {
-        maven {
-            name = "Intelligence Minecraft"
-            url = "https://mvn.intelligence-modding.de/Minecraft"
-        }
-        mavenCentral()
-        gradlePluginPortal()
-    }
-    dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '6.0+', changing: true
-        classpath 'org.parchmentmc:librarian:1.+'
-    }
-}
-
 plugins {
     id "maven-publish"
     id 'net.darkhax.curseforgegradle' version '1.1.16'
     id 'org.jetbrains.changelog' version '1.2.1'
     id "com.modrinth.minotaur" version "2.+"
     id "org.jetbrains.kotlin.jvm" version "1.6.10"
+    id 'net.neoforged.gradle' version '[6.0.18,6.2)'
+    id 'org.spongepowered.mixin' version '0.7.+'
     id 'checkstyle'
     id 'java'
 }
-
-apply plugin: 'net.minecraftforge.gradle'
-apply plugin: 'org.parchmentmc.librarian.forgegradle'
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
@@ -251,7 +235,7 @@ dependencies {
 
     // Minimal requirements
     compileOnly "org.jetbrains:annotations:${jb_annotations}"
-    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
+    minecraft "net.neoforged:forge:${minecraft_version}-${neo_version}"
     implementation fg.deobf("cc.tweaked:cc-tweaked-${minecraft_version}-forge:${cc_version}")
     // Compile-time API required
     // Ae2
@@ -417,7 +401,7 @@ tasks.withType(Checkstyle) {
 
 tasks.named('processResources', ProcessResources).configure {
     var replaceProperties = [minecraft_version         : minecraft_version,
-                             forge_version             : forge_version,
+                             neo_version               : neo_version,
                              loader_version            : loader_version,
                              mod_id                    : mod_id,
                              version                   : version,
@@ -522,6 +506,7 @@ publishing {
                     NodeList dependencies = asNode().dependencies
                     NodeList allDeps = dependencies.'*'
 
+                    //TODO: Needs to be changed in 1.20.2 since neoforge then changes the packages names.
                     // Remove forge deps
                     allDeps.<Node> findAll() { Node el ->
                         el.artifactId.text() == 'forge' && el.groupId.text() == 'net.minecraftforge'
