--- a/build.gradle
+++ b/build.gradle
@@ -285,12 +285,17 @@ dependencies {
     implementation fg.deobf("vazkii.botania:Botania:${botania_version}")
 
     // Minecolonies
-    // Change to compileOnly when running `runData`
     compileOnly fg.deobf("com.ldtteam:minecolonies:${minecolonies_version}")
     compileOnly fg.deobf("com.ldtteam:structurize:${structurize_version}")
     compileOnly fg.deobf("com.ldtteam:multipiston:${multipiston_version}")
     compileOnly fg.deobf("com.ldtteam:domum_ornamentum:${domumornamentum_version}:universal")
     compileOnly fg.deobf("com.ldtteam:blockui:${blockui_version}")
+    // Uncomment the next 5 lines when using `runData`
+    runtimeOnly fg.deobf("com.ldtteam:minecolonies:${minecolonies_version}")
+    runtimeOnly fg.deobf("com.ldtteam:structurize:${structurize_version}")
+    runtimeOnly fg.deobf("com.ldtteam:multipiston:${multipiston_version}")
+    runtimeOnly fg.deobf("com.ldtteam:domum_ornamentum:${domumornamentum_version}:universal")
+    runtimeOnly fg.deobf("com.ldtteam:blockui:${blockui_version}")
 
     //Patchouli
     runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
