--- a/build.gradle
+++ b/build.gradle
@@ -253,6 +253,10 @@ dependencies {
     // Compile-time API required
     // Ae2
     implementation fg.deobf("appeng:appliedenergistics2-forge:${appliedenergistics_version}")
+
+    // Applied Mekanistics
+    implementation fg.deobf("curse.maven:applied-mekanistics-574300:${appliedmekanistics_version}")
+
     // Curios
     implementation fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}:api")
     // Minimal requirements end
