--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,8 @@
 blank_issues_enabled: false
 contact_links:
   - name: Documentation Issues
+    url: https://github.com/SirEndii/Advanced-Peripherals-Features/issues/new/choose
+    about: Please create feature requests at the proper repository.
+  - name: Documentation Issues
     url: https://github.com/Seniorendi/Advanced-Peripherals-Documentation/issues
     about: Please create issues of the documentation at the proper repository.
