--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,6 +1,6 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Documentation Issues
+  - name: Feature Requests
     url: https://github.com/SirEndii/Advanced-Peripherals-Features/issues/new/choose
     about: Please create feature requests at the proper repository.
   - name: Documentation Issues
