--- a/gradle.properties
+++ b/gradle.properties
@@ -36,6 +36,7 @@ powah_version=4638301
 ae2additions_version=4646598
 kotlinforforge_version=4.4.0
 appliedmekanistics_version=4842281
+dimstorage_version=4717497
 
 # Mod dependencies which are needed for other mods
 # For minecolonies
@@ -47,5 +48,9 @@ multipiston_version=1.19.3-1.2.26-ALPHA
 # For Create
 flywheel_version=0.6.8.a-1
 
+# For DimStorage
+edivadlib_version=4717006
+
 # Mod dependencies for testing stuff(Only used in the dev environment)
 jei_version=1.20.1-forge:15.2.0.22
+jade_version=4973483
