--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -3,3 +3,4 @@ public net.minecraft.world.level.block.entity.BeaconBlockEntity f_58653_
 public-f net.minecraft.world.level.levelgen.structure.pools.StructureTemplatePool f_210559_ # rawTemplates
 public-f net.minecraft.world.level.levelgen.structure.pools.StructureTemplatePool f_210560_ # templates
 public net.minecraft.world.level.block.Blocks m_50805_(Lnet/minecraft/world/level/block/state/BlockState;Lnet/minecraft/world/level/BlockGetter;Lnet/minecraft/core/BlockPos;)Z # never
+public net.minecraft.world.level.block.entity.BeaconBlockEntity f_58650_ # levels
