--- a/gradle.properties
+++ b/gradle.properties
@@ -7,8 +7,8 @@ mod_id=advancedperipherals
 minecraft_version=1.20.1
 neo_version=47.1.79
 loader_version=47
-mod_version=0.7.36b
-release_type=beta
+mod_version=0.7.36r
+release_type=release
 mappings_channel=official
 #mappings_version=2022.11.27-1.19.2
 mappings_version=1.20.1
