Add a way to create and push commits in gradle

--- a/build.gradle
+++ b/build.gradle
@@ -480,7 +480,7 @@ task commitAndPush() {
         }
 
         exec {
-            commandLine 'git', 'push', 'origin'
+            commandLine 'git', 'push'
         }
     }
 }
