--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.logging.level=info
 # Minecraft related
 mod_id=advancedperipherals
 minecraft_version=1.19.2
-forge_version=43.3.0
+forge_version=43.3.8
 loader_version=43
 mod_version=0.7.34r
 release_type=release
@@ -38,10 +38,10 @@ appliedmekanistics_version=4734608
 
 # Mod dependencies which are needed for other mods
 # For minecolonies
-structurize_version=1.19.2-1.0.491-ALPHA
-domumornamentum_version=1.19-1.0.83-ALPHA
-blockui_version=1.19-0.0.69-ALPHA
+structurize_version=1.19.2-1.0.649-BETA
 multipiston_version=1.19.2-1.2.21-ALPHA
+blockui_version=1.19.2-0.0.102-ALPHA
+domumornamentum_version=1.19-1.0.141-BETA
 
 # Mod dependencies for testing stuff(Only used in the dev environment)
 jei_version=1.19.2-forge:11.6.0.1016
