--- a/src/testMod/resources/META-INF/mods.toml
+++ b/src/testMod/resources/META-INF/mods.toml
@@ -1,16 +1,11 @@
 modLoader = "javafml"
-loaderVersion = "[30,)"
-
-issueTrackerURL = "https://github.com/SquidDev-CC/CC-Tweaked/issues"
-displayURL = "https://github.com/SquidDev-CC/CC-Tweaked"
+loaderVersion = "[43,)"
+license = "Apache-2.0 license"
+issueTrackerURL = "https://github.com/Seniorendi/AdvancedPeripherals/issues"
 logoFile = "pack.png"
 
-credits = "Created by Daniel Ratcliffe (@DanTwoHundred)"
-authors = "Daniel Ratcliffe, Aaron Mills, SquidDev"
-license = "ComputerCraft Public License (https://raw.githubusercontent.com/dan200/ComputerCraft/master/LICENSE)"
-
 [[mods]]
-modId = "aptest"
+modId = "advancedperipheralstest"
 version = "1.0.0"
 displayName = "CC: Tweaked test framework"
 description = '''
