[#536] Invalidate the output energy storage cache when detecting neighbour changes

--- a/build.gradle
+++ b/build.gradle
@@ -345,6 +345,10 @@ dependencies {
     // Testing stuff
     // JEI
     implementation fg.deobf("mezz.jei:jei-${jei_version}")
+
+    // Create Crafts & Additions
+    compileOnly fg.deobf("curse.maven:createaddition-439890:5099757")
+    // runtimeOnly fg.deobf("curse.maven:createaddition-439890:5099757")
 }
 
 
