--- a/gradle.properties
+++ b/gradle.properties
@@ -28,7 +28,8 @@ appliedenergistics_version=12.9.5
 patchouli_version=1.19.2-77
 refinedstorage_version=1.11.6
 botania_version=1.19.2-440-FORGE
-create_version=0.5.1.b-30
+create_version=0.5.1.f-46
+createca_version=5099757
 mekanism_version=1.19.2-10.3.9.13
 ae2things_version=4367610
 powah_version=4183078
